fixed weird flexbox alignment in MS edge browsers

--- a/components/_patterns/00-base/layouts/item/_flexbox__item.scss
+++ b/components/_patterns/00-base/layouts/item/_flexbox__item.scss
@@ -137,7 +137,7 @@
     align-content: flex-start;
 
     &:first-of-type {
-      flex: 0 1 100%;
+      flex: 0 1 auto;
       align-self: space-around;
     }
   }
